syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Event {
  string name = 1;
  // each element is an index for a tag
  repeated uint32 tags = 2;
  google.protobuf.Timestamp start = 3;
  google.protobuf.Timestamp end = 4;
  // duration is in minutes
  uint32 duration = 5;
}

// Events
message EventsRequest {}
message EventsResponse {
  repeated string tags = 1;
  repeated Event events = 2;
}

service CalendarService {
  rpc Events(EventsRequest) returns (EventsResponse);
}

